Fixed header spacing

--- a/src/main/webapp/global.css
+++ b/src/main/webapp/global.css
@@ -59,3 +59,9 @@ body {
 .btn-wider {
   width: 200px !important;
 }
+
+/* Text */
+
+#header-text {
+  margin-bottom: 0 !important;
+}
